# ic-websocket-gateway

./: .dockerignore  .editorconfig  .env.example  .env.local  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose-local.yml  docker-compose-prod.yml  docker-compose.yaml  docker-compose.yml  integration_test.py  rustfmt.toml
.github/: CODEOWNERS
.github/actions/setup-dfx/: action.yml
.github/actions/setup-node/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: integration-tests.yml  load-tests.yml  publish.yml  rust-tests.yml  tests.yml
benchmarks/d_100_r_2_m_100_c_3/: README.md  gateway_load_tests.html  gateway_load_tests.json
benchmarks/d_100_r_5_m_100_c_1/: README.md  gateway_load_tests.html  gateway_load_tests.json
benchmarks/d_100_r_5_m_100_c_2/: README.md  gateway_load_tests.html  gateway_load_tests.json
benchmarks/d_100_r_5_m_100_c_3/: README.md  gateway_load_tests.html  gateway_load_tests.json
docs/: docker-compose-structure.excalidraw  ic-ws-protocol.md  message-flow.md
ic_websocket_canisters/: dfx.json  jest.config.ts  jest.setup.ts  package-lock.json  package.json  tsconfig.json
ic_websocket_canisters/src/ic_websocket_backend/: Cargo.toml  ic_websocket_backend.did
ic_websocket_canisters/src/ic_websocket_backend/src/: canister.rs  lib.rs  sock.rs
ic_websocket_canisters/src/ic_websocket_frontend/: index.html  package-lock.json  package.json  vite.config.ts
ic_websocket_canisters/src/ic_websocket_frontend/src/: icWebsocket.ts  index.js  main.ts  websocketConnection.js
ic_websocket_canisters/src/ic_websocket_frontend/src/ic-websocket/: actor.d.ts  icWebsocket.ts  types.d.ts  utils.ts
ic_websocket_canisters/src/ic_websocket_frontend/src/utils/: addNotification.ts  parseHTMLString.ts  validateBody.ts
ic_websocket_canisters/tests/: client.test.ts
ic_websocket_canisters/tests/integration/: canister.test.ts  client.test.ts
ic_websocket_canisters/tests/integration/utils/: actors.ts  api.ts
ic_websocket_canisters/tests/unit/: ic-websocket.test.ts  utils.test.ts
ic_websocket_gateway/: Cargo.toml
ic_websocket_gateway/src/: canister_methods.rs  main.rs
nginx/: nginx.conf.template
scripts/: certbot_certonly.sh  ci_cd_test.sh  ci_cd_test_integration.sh  ci_cd_test_load.sh  ci_cd_test_unit.sh  install_integration_test_deps.sh  install_test_dependencies.sh  integration_test_mo.sh  integration_test_rs.sh  local_test.sh  local_test_mo.sh  prepare_integration_tests.sh  prepare_tests.sh  run_load_tests.sh  run_test_canister.sh  start_local_docker_environment.sh  start_prod_docker_environment.sh  stop_local_docker_environment.sh  stop_prod_docker_environment.sh  test_docker_environment.sh  unit_test.sh
src/canister-utils/: Cargo.toml
src/canister-utils/src/: lib.rs
src/concurrent-map/: Cargo.toml
src/concurrent-map/src/: lib.rs
src/gateway-state/: Cargo.toml
src/gateway-state/src/: lib.rs
src/ic-identity/: Cargo.toml
src/ic-identity/src/: lib.rs
src/ic-identity/tests/data/: test_key_pair
src/ic-websocket-gateway/: Cargo.toml
src/ic-websocket-gateway/src/: canister_methods.rs  canister_poller.rs  client_connection_handler.rs  client_session.rs  client_session_handler.rs  events_analyzer.rs  gateway_metrics.rs  gateway_server.rs  gateway_tracing.rs  http_fire_and_forget_client.rs  main.rs  management_poller.rs  manager.rs  messages_demux.rs  metrics_analyzer.rs  unit_tests.rs  ws_listener.rs
src/ic-websocket-gateway/src/metrics/: canister_poller_metrics.rs  client_connection_handler_metrics.rs  client_session_handler_metrics.rs  gateway_server_metrics.rs  ws_listener_metrics.rs
src/ic-websocket-gateway/src/tests/: canister_poller.rs  client_connection_handler.rs  events_analyzer.rs
src/management_canister/: .gitignore  Cargo.toml  README.md  dfx.json  management_canister.did
src/management_canister/src/: lib.rs
src/scripts/: Cargo.toml
telemetry/: grafana-datasources.yaml  otel-config.yaml  prometheus.yml  tempo-config.yaml
telemetry/dashboards/: duration_by_thread_id.json  ic_metrics.json  ic_ws_gw.json
telemetry/prometheus/: Dockerfile  prometheus-local.yml  prometheus-template.yml
tests/: .env.example  .gitignore  canister_ids.json  dfx.json  gateway_load_tests.yml  jest.config.ts  jest.setup.ts  mops.toml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.js
tests/integration/: .gitignore  Cargo.toml  jest.setup.ts  package-lock.json  package.json  run_n_clients.py  tsconfig.json
tests/integration/src/: client.test.ts
tests/integration/src/test_canister/: test_canister.did
tests/integration/src/utils/: actors.ts  environment.ts  identity.ts  idl.ts
tests/integration/tests/: client.test.ts
tests/integration/tests/utils/: actors.ts  api.ts  crypto.ts
tests/load/: .env.example  .gitignore  gateway_load_tests.yml  package-lock.json  package.json  webpack.config.js
tests/load/scripts/: run_load_tests.sh
tests/load/src/: client.js  helpers.js  idl.js  load.js
tests/src/integration/: client.test.ts
tests/src/integration/utils/: environment.ts
tests/src/load/: client.js  helpers.js  prepare-environment.js
tests/src/test_canister_mo/: main.mo
tests/src/test_canister_rs/: Cargo.toml  test_canister_rs.did  ws_types.did
tests/src/test_canister_rs/src/: canister.rs  lib.rs
tests/test_canister/: .gitignore  canister_ids.json  dfx.json  package-lock.json  package.json
tests/test_canister/src/test_canister/: Cargo.toml  test_canister.did  ws_types.did
tests/test_canister/src/test_canister/src/: canister.rs  lib.rs
tests/test_canister_mo/: .gitignore  dfx.json  mops.toml  package-lock.json  package.json
tests/test_canister_mo/src/test_canister_mo/: main.mo
tests/test_canister_rs/: Cargo.toml  dfx.json  package-lock.json  package.json
tests/test_canister_rs/src/test_canister_rs/: Cargo.toml
tests/test_canister_rs/src/test_canister_rs/src/: canister.rs  lib.rs
