[workspace]
members = [
    "src/ic-websocket-gateway",
    "src/ic-identity",
    "src/scripts",
    "src/gateway-state",
    "tests/src/test_canister_rs",
]
default-members = ["src/ic-websocket-gateway"]

resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75.0"
repository = "https://github.com/omnia-network/ic-websocket-gateway"
description = "IC Websocket Gateway workspace"
license = "MIT"

[workspace.dependencies]
candid = "0.10.3"
ic-cdk = "0.12.0"
ic-cdk-macros = "0.8.4"
serde = "1.0.176"
ic-agent = "0.33.0"
reqwest = "0.11.7"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.40"
