[workspace]
members = [
    "src/ic-websocket-gateway",
    "src/ic-identity",
    "src/scripts",
    "src/gateway-state",
    "src/canister-utils",
    "tests/src/test_canister_rs",
]
default-members = ["src/ic-websocket-gateway"]

resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.76.0"
repository = "https://github.com/omnia-network/ic-websocket-gateway"
description = "IC Websocket Gateway workspace"
license = "MIT"

[workspace.dependencies]
candid = "0.10.3"
ic-cdk = "0.12.0"
ic-cdk-macros = "0.8.4"
ic-agent = "0.33.0"

serde = "1.0.176"

reqwest = "0.11.7"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.40"
metrics = "0.22.1"

canister-utils = { path = "src/canister-utils" }
ic-identity = { path = "src/ic-identity" }
