[workspace]
members = [
    "src/ic-websocket-gateway",
    "src/ic-identity",
    "src/scripts",
    "src/gateway-state",
    "src/canister-utils",
    "tests/src/test_canister_rs",
]
default-members = ["src/ic-websocket-gateway"]

resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.79"
repository = "https://github.com/omnia-network/ic-websocket-gateway"
description = "IC Websocket Gateway workspace"
license = "MIT"

[workspace.dependencies]
candid = "0.10"
ic-cdk = "0.15"
ic-cdk-macros = "0.15"
ic-agent = "0.36"

serde = "1.0"
serde_bytes = "0.11"

reqwest = "0.12"
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1"
metrics = "0.23"

canister-utils = { path = "src/canister-utils" }
ic-identity = { path = "src/ic-identity" }
