[package]
name = "canister-utils"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ic-agent = { workspace = true }
candid = { workspace = true }

serde = { workspace = true }
serde_bytes = { workspace = true }

tracing = { workspace = true }
reqwest = { workspace = true }

[features]
mock-server = []
