[package]
name = "gateway-state"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
dashmap = "5.5.3"
ic-agent = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
canister-utils = { version = "1.0.0", path = "../canister-utils" }
