[package]
name = "gateway-state"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ic-agent = { workspace = true }

dashmap = "5.5.3"
tokio = { workspace = true }
tracing = { workspace = true }

canister-utils = { workspace = true }
