[package]
name = "ic_websocket_gateway"
version = "1.2.3"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.72"
candid = { workspace = true }
ic-agent = { workspace = true }
serde = { workspace = true }
serde_cbor = "0.11.2"
tokio = { workspace = true }
tokio-native-tls = "0.3.1"
native-tls = "0.2.11"
tokio-util = "0.7.8"
serde_bytes = "0.11.12"
tokio-tungstenite = "0.20.0"
futures-util = "0.3.28"
structopt = "0.3.21"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.17", features = [
  "fmt",
  "std",
  "json",
  "env-filter",
  "registry",
] }
tracing-appender = "0.2"
ic-identity = { path = "../ic-identity" }
gateway-state = { path = "../gateway-state" }
canister-utils = { path = "../canister-utils" }
rand = "0.8"
opentelemetry = { version = "0.20" }
tracing-opentelemetry = "0.20"
opentelemetry-jaeger = { version = "0.19", features = ["rt-tokio"] }
opentelemetry_sdk = { version = "0.20", features = ["rt-tokio"] }

[dev-dependencies]
websocket = "0.26.5"
mockito = "1.2.0"
lazy_static = "1.4.0"
canister-utils = { path = "../canister-utils", features = ["mock-server"] }
