[package]
name = "ic_websocket_gateway"
version = "1.4.3"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
candid = { workspace = true }
ic-agent = { workspace = true }

serde = { workspace = true }
serde_cbor = "0.11"
serde_bytes = { workspace = true }

async-trait = "0.1"
tokio = { workspace = true }
tokio-native-tls = "0.3"
native-tls = "0.2"
tokio-util = "0.7"
tokio-tungstenite = "0.23"
futures-util = "0.3"
structopt = "0.3"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = [
  "fmt",
  "std",
  "json",
  "env-filter",
  "registry",
] }
tracing-appender = "0.2"
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
rand = "0.8"
metrics = { workspace = true }
metrics-exporter-prometheus = "0.15"
metrics-util = "0.17"

ic-identity = { workspace = true }
canister-utils = { workspace = true }
gateway-state = { path = "../gateway-state" }

[dev-dependencies]
websocket = "0.27"
mockito = "1.4"
lazy_static = "1.5"

canister-utils = { workspace = true, features = ["mock-server"] }
