[package]
name = "management_canister"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.3"
ic-cdk = "0.10.0"
ic-cdk-macros = "0.7.1"
serde = "1.0.176"
serde_cbor = "0.11.2"
base64 = "0.21.2"
sha2 = "0.10.7"
serde_bytes = "0.11.12"