[package]
name = "ic_websocket_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.4"
ic-cdk = "0.9.2"
ic-cdk-macros = "0.7.0"
serde = "1.0.176"
serde_cbor = "0.11.2"
ic-websocket-cdk = { git = "https://github.com/omnia-network/ic-websocket-cdk-rs", rev = "989f74b6f871c113628cd20697e42b85d503e37d" }
