[package]
name = "test_canister_rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-websocket-cdk = { git = "https://github.com/omnia-network/ic-websocket-cdk-rs", branch = "multiple-gw" }
serde = { workspace = true }
